--- a/Epsilon Engine.cbp
+++ b/Epsilon Engine.cbp
@@ -67,7 +67,7 @@
 					<Add directory="deppend/SOIL/src" />
 					<Add directory="deppend/FreeType2/include" />
 					<Add directory="deppend/ini/include" />
-					<Add directory="include" />
+					<Add directory="core/include" />
 					<Add directory="deppend/bullet-2.82-r2704/src" />
 					<Add directory="deppend/openal-soft-master/openal-soft-master/include" />
 					<Add directory="deppend/stb-master" />
@@ -100,156 +100,160 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="include/Audio/Audio.h" />
-		<Unit filename="include/Audio/AudioElement.h" />
-		<Unit filename="include/Audio/AudioListener.h" />
-		<Unit filename="include/Audio/Loaders/WAVFile.h" />
-		<Unit filename="include/BSP.h" />
-		<Unit filename="include/BSPFace.h" />
-		<Unit filename="include/BSPfile.h" />
-		<Unit filename="include/BSPformat.h" />
-		<Unit filename="include/CBitset.h" />
-		<Unit filename="include/CommandFunctions.h" />
-		<Unit filename="include/Component.h" />
-		<Unit filename="include/CubeMap.h" />
-		<Unit filename="include/EntityTemplate.h" />
-		<Unit filename="include/Epsilon.h" />
-		<Unit filename="include/EpsilonMemory.h" />
-		<Unit filename="include/Frustum.h" />
-		<Unit filename="include/GUI/Button.h" />
-		<Unit filename="include/GUI/CheckBox.h" />
-		<Unit filename="include/GUI/Console.h" />
-		<Unit filename="include/GUI/Container.h" />
-		<Unit filename="include/GUI/GUI.h" />
-		<Unit filename="include/GUI/Label.h" />
-		<Unit filename="include/GUI/Panel.h" />
-		<Unit filename="include/GUI/Widget.h" />
-		<Unit filename="include/Grass.h" />
-		<Unit filename="include/Image/BMP.hpp" />
-		<Unit filename="include/Image/DDS.h" />
-		<Unit filename="include/Image/DDSFile.h" />
-		<Unit filename="include/Image/Image.hpp" />
-		<Unit filename="include/Image/TGA.hpp" />
-		<Unit filename="include/Includes.h" />
-		<Unit filename="include/Light.h" />
-		<Unit filename="include/LightProbe.h" />
-		<Unit filename="include/Log.h" />
-		<Unit filename="include/MD5_Anim.h" />
-		<Unit filename="include/MD5_Model.h" />
-		<Unit filename="include/Mesh.h" />
-		<Unit filename="include/Model.h" />
-		<Unit filename="include/OpenGL/FrameBuffer.h" />
-		<Unit filename="include/OpenGL/HelperFunctions/CheckError.h" />
-		<Unit filename="include/OpenGL/HelperFunctions/FullScreenQuad.h" />
-		<Unit filename="include/OpenGL/HelperFunctions/Quad.h" />
-		<Unit filename="include/OpenGL/RenderTarget.h" />
-		<Unit filename="include/OpenGL/Renderers/DeferredRenderer.h" />
-		<Unit filename="include/OpenGL/Renderers/renderer.h" />
-		<Unit filename="include/OpenGL/ShaderPreProcessor.h">
-			<Option target="&lt;{~None~}&gt;" />
-		</Unit>
-		<Unit filename="include/OpenGL/VertexArrayObject.h" />
-		<Unit filename="include/OpenGL/VertexBufferObject.h" />
-		<Unit filename="include/Particle.h" />
-		<Unit filename="include/ParticleProxy.h" />
-		<Unit filename="include/ParticleRenderer.h" />
-		<Unit filename="include/ParticleSystem.h" />
-		<Unit filename="include/Patch.h" />
-		<Unit filename="include/Physics/ClothPhysicObject.h" />
-		<Unit filename="include/Physics/CollisionInfo.h" />
-		<Unit filename="include/Physics/CubePhysicObject.h" />
-		<Unit filename="include/Physics/PhysicObject.h" />
-		<Unit filename="include/Physics/Physics.h" />
-		<Unit filename="include/Physics/PlayerControlledPhysicsObject.h" />
-		<Unit filename="include/Physics/SpherePhysicObject.h" />
-		<Unit filename="include/Physics/TriangleMeshPhysicObject.h" />
-		<Unit filename="include/Picking.h" />
-		<Unit filename="include/Player.h" />
-		<Unit filename="include/PostProcess.h" />
-		<Unit filename="include/PostProcess/Effect.h" />
-		<Unit filename="include/PostProcess/MotionBlur.h" />
-		<Unit filename="include/PostProcess/SSAO.h" />
-		<Unit filename="include/PostProcess/ScreenSpaceReflections.h" />
-		<Unit filename="include/ProgramData.h" />
-		<Unit filename="include/ResourceManager.h" />
-		<Unit filename="include/Scene.h" />
-		<Unit filename="include/Shader.h" />
-		<Unit filename="include/ShadowMapping.h" />
-		<Unit filename="include/Skybox.h" />
-		<Unit filename="include/SkyboxData.h" />
-		<Unit filename="include/SphericalHarmonics.h" />
-		<Unit filename="include/SplashScreen.h" />
-		<Unit filename="include/Sun.h" />
-		<Unit filename="include/Terrain.h" />
-		<Unit filename="include/Text.h" />
-		<Unit filename="include/Texture.h" />
-		<Unit filename="include/Types.h" />
-		<Unit filename="include/Water.h" />
-		<Unit filename="include/camera.h" />
-		<Unit filename="include/cubemapRenderer.h" />
-		<Unit filename="include/emlFormat.h" />
-		<Unit filename="include/empFormat.h" />
-		<Unit filename="include/main.h" />
-		<Unit filename="include/multithread/Job.h" />
-		<Unit filename="include/multithread/Lambda.hpp" />
-		<Unit filename="include/multithread/Mutex.h" />
-		<Unit filename="include/multithread/Promise.hpp" />
-		<Unit filename="include/multithread/Thread.h" />
-		<Unit filename="include/multithread/ThreadPool.hpp" />
-		<Unit filename="include/renderer/DeferredRenderer.h">
-			<Option target="&lt;{~None~}&gt;" />
-		</Unit>
-		<Unit filename="include/renderer/Renderer.h" />
-		<Unit filename="include/sys/CPUID.h" />
-		<Unit filename="include/sys/Console.hpp" />
-		<Unit filename="include/sys/Joystick.h" />
-		<Unit filename="include/sys/JoystickWrapper.h" />
-		<Unit filename="include/sys/KeyBoard.h" />
-		<Unit filename="include/sys/KeyboardWrapper.h" />
-		<Unit filename="include/sys/Mouse.h" />
-		<Unit filename="include/sys/filesystem.h" />
-		<Unit filename="src/Audio/Audio.cpp" />
-		<Unit filename="src/BSP.cpp" />
-		<Unit filename="src/BSPFace.cpp" />
-		<Unit filename="src/Camera.cpp" />
-		<Unit filename="src/EntityTemplate.cpp" />
-		<Unit filename="src/Epsilon.cpp" />
-		<Unit filename="src/Frustum.cpp" />
-		<Unit filename="src/Image/DDS.cpp" />
-		<Unit filename="src/MD5_Anim.cpp" />
-		<Unit filename="src/MD5_Model.cpp" />
-		<Unit filename="src/Mesh.cpp" />
-		<Unit filename="src/Model.cpp" />
-		<Unit filename="src/Particle.cpp" />
-		<Unit filename="src/Patch.cpp" />
-		<Unit filename="src/Physics/ClothPhysicObject.cpp" />
-		<Unit filename="src/Physics/CubePhysicObject.cpp" />
-		<Unit filename="src/Physics/Physics.cpp" />
-		<Unit filename="src/Physics/SpherePhysicObject.cpp" />
-		<Unit filename="src/Physics/TriangleMeshPhysicObject.cpp" />
-		<Unit filename="src/Picking.cpp" />
-		<Unit filename="src/Player.cpp" />
-		<Unit filename="src/PostProcess.cpp" />
-		<Unit filename="src/PostProcess/MotionBlur.cpp" />
-		<Unit filename="src/PostProcess/SSAO.cpp" />
-		<Unit filename="src/PostProcess/ScreenSpaceReflections.cpp" />
-		<Unit filename="src/ProgramData.cpp" />
-		<Unit filename="src/ResourceManager.cpp" />
-		<Unit filename="src/Scene.cpp" />
-		<Unit filename="src/Shader.cpp" />
-		<Unit filename="src/ShadowMapping.cpp" />
-		<Unit filename="src/Skybox.cpp" />
-		<Unit filename="src/SphericalHarmonics.cpp" />
-		<Unit filename="src/Sun.cpp" />
-		<Unit filename="src/Terrain.cpp" />
-		<Unit filename="src/Water.cpp" />
-		<Unit filename="src/cubemapRenderer.cpp" />
-		<Unit filename="src/main.cpp" />
-		<Unit filename="src/resources.rc">
+		<Unit filename="core/include/Audio/Audio.h" />
+		<Unit filename="core/include/Audio/AudioElement.h" />
+		<Unit filename="core/include/Audio/AudioListener.h" />
+		<Unit filename="core/include/Audio/Loaders/WAVFile.h" />
+		<Unit filename="core/include/BSP.h" />
+		<Unit filename="core/include/BSPFace.h" />
+		<Unit filename="core/include/BSPfile.h" />
+		<Unit filename="core/include/BSPformat.h" />
+		<Unit filename="core/include/CBitset.h" />
+		<Unit filename="core/include/CommandFunctions.h" />
+		<Unit filename="core/include/Component.h" />
+		<Unit filename="core/include/ConvexHull.hpp" />
+		<Unit filename="core/include/CubeMap.h" />
+		<Unit filename="core/include/DDS.h" />
+		<Unit filename="core/include/DDSFile.h" />
+		<Unit filename="core/include/EntityTemplate.h" />
+		<Unit filename="core/include/Epsilon.h" />
+		<Unit filename="core/include/EpsilonMemory.h" />
+		<Unit filename="core/include/Frustum.h" />
+		<Unit filename="core/include/GUI/Button.h" />
+		<Unit filename="core/include/GUI/CheckBox.h" />
+		<Unit filename="core/include/GUI/Console.h" />
+		<Unit filename="core/include/GUI/Container.h" />
+		<Unit filename="core/include/GUI/GUI.h" />
+		<Unit filename="core/include/GUI/Label.h" />
+		<Unit filename="core/include/GUI/Panel.h" />
+		<Unit filename="core/include/GUI/Widget.h" />
+		<Unit filename="core/include/GUI_Initialization.h" />
+		<Unit filename="core/include/Grass.h" />
+		<Unit filename="core/include/Image/BMP.hpp" />
+		<Unit filename="core/include/Image/DDS.h" />
+		<Unit filename="core/include/Image/DDSFile.h" />
+		<Unit filename="core/include/Image/Image.hpp" />
+		<Unit filename="core/include/Image/TGA.hpp" />
+		<Unit filename="core/include/Includes.h" />
+		<Unit filename="core/include/Light.h" />
+		<Unit filename="core/include/LightProbe.h" />
+		<Unit filename="core/include/Log.h" />
+		<Unit filename="core/include/MD5_Anim.h" />
+		<Unit filename="core/include/MD5_Model.h" />
+		<Unit filename="core/include/Mesh.h" />
+		<Unit filename="core/include/Model.h" />
+		<Unit filename="core/include/OpenGL/FrameBuffer.h" />
+		<Unit filename="core/include/OpenGL/GlCache.h" />
+		<Unit filename="core/include/OpenGL/HelperFunctions/CheckError.h" />
+		<Unit filename="core/include/OpenGL/HelperFunctions/FullScreenQuad.h" />
+		<Unit filename="core/include/OpenGL/HelperFunctions/Quad.h" />
+		<Unit filename="core/include/OpenGL/RenderTarget.h" />
+		<Unit filename="core/include/OpenGL/Renderers/DeferredRenderer.h" />
+		<Unit filename="core/include/OpenGL/Renderers/renderer.h" />
+		<Unit filename="core/include/OpenGL/ShaderPreProcessor.h" />
+		<Unit filename="core/include/OpenGL/ShaderStorageBuffer.h" />
+		<Unit filename="core/include/OpenGL/VertexArrayObject.h" />
+		<Unit filename="core/include/OpenGL/VertexBufferObject.h" />
+		<Unit filename="core/include/Particle.h" />
+		<Unit filename="core/include/ParticleProxy.h" />
+		<Unit filename="core/include/ParticleRenderer.h" />
+		<Unit filename="core/include/ParticleSystem.h" />
+		<Unit filename="core/include/Patch.h" />
+		<Unit filename="core/include/Physics/ClothPhysicObject.h" />
+		<Unit filename="core/include/Physics/CollisionInfo.h" />
+		<Unit filename="core/include/Physics/CubePhysicObject.h" />
+		<Unit filename="core/include/Physics/PhysicObject.h" />
+		<Unit filename="core/include/Physics/Physics.h" />
+		<Unit filename="core/include/Physics/PlayerControlledPhysicsObject.h" />
+		<Unit filename="core/include/Physics/SpherePhysicObject.h" />
+		<Unit filename="core/include/Physics/TriangleMeshPhysicObject.h" />
+		<Unit filename="core/include/Picking.h" />
+		<Unit filename="core/include/Player.h" />
+		<Unit filename="core/include/PostProcess.h" />
+		<Unit filename="core/include/PostProcess/Effect.h" />
+		<Unit filename="core/include/PostProcess/MotionBlur.h" />
+		<Unit filename="core/include/PostProcess/SSAO.h" />
+		<Unit filename="core/include/PostProcess/ScreenSpaceReflections.h" />
+		<Unit filename="core/include/ProgramData.h" />
+		<Unit filename="core/include/ResourceManager.h" />
+		<Unit filename="core/include/Scene.h" />
+		<Unit filename="core/include/Shader.h" />
+		<Unit filename="core/include/ShadowMapping.h" />
+		<Unit filename="core/include/Skybox.h" />
+		<Unit filename="core/include/SkyboxData.h" />
+		<Unit filename="core/include/SphericalHarmonics.h" />
+		<Unit filename="core/include/SplashScreen.h" />
+		<Unit filename="core/include/Sun.h" />
+		<Unit filename="core/include/Terrain.h" />
+		<Unit filename="core/include/Text.h" />
+		<Unit filename="core/include/Texture.h" />
+		<Unit filename="core/include/Types.h" />
+		<Unit filename="core/include/Water.h" />
+		<Unit filename="core/include/camera.h" />
+		<Unit filename="core/include/cubemapRenderer.h" />
+		<Unit filename="core/include/emlFormat.h" />
+		<Unit filename="core/include/empFormat.h" />
+		<Unit filename="core/include/main.h" />
+		<Unit filename="core/include/multithread/Job.h" />
+		<Unit filename="core/include/multithread/Lambda.hpp" />
+		<Unit filename="core/include/multithread/Mutex.h" />
+		<Unit filename="core/include/multithread/Promise.hpp" />
+		<Unit filename="core/include/multithread/Thread.h" />
+		<Unit filename="core/include/multithread/ThreadPool.hpp" />
+		<Unit filename="core/include/renderer/DeferredRenderer.h" />
+		<Unit filename="core/include/renderer/Renderer.h" />
+		<Unit filename="core/include/sys/CPUID.h" />
+		<Unit filename="core/include/sys/Console.hpp" />
+		<Unit filename="core/include/sys/GPU.hpp" />
+		<Unit filename="core/include/sys/Joystick.h" />
+		<Unit filename="core/include/sys/JoystickWrapper.h" />
+		<Unit filename="core/include/sys/KeyBoard.h" />
+		<Unit filename="core/include/sys/KeyboardWrapper.h" />
+		<Unit filename="core/include/sys/Mouse.h" />
+		<Unit filename="core/include/sys/filesystem.h" />
+		<Unit filename="core/src/Audio/Audio.cpp" />
+		<Unit filename="core/src/BSP.cpp" />
+		<Unit filename="core/src/BSPFace.cpp" />
+		<Unit filename="core/src/Camera.cpp" />
+		<Unit filename="core/src/DDS.cpp" />
+		<Unit filename="core/src/EntityTemplate.cpp" />
+		<Unit filename="core/src/Epsilon.cpp" />
+		<Unit filename="core/src/Frustum.cpp" />
+		<Unit filename="core/src/Image/DDS.cpp" />
+		<Unit filename="core/src/MD5_Anim.cpp" />
+		<Unit filename="core/src/MD5_Model.cpp" />
+		<Unit filename="core/src/Mesh.cpp" />
+		<Unit filename="core/src/Model.cpp" />
+		<Unit filename="core/src/Particle.cpp" />
+		<Unit filename="core/src/Patch.cpp" />
+		<Unit filename="core/src/Physics/ClothPhysicObject.cpp" />
+		<Unit filename="core/src/Physics/CubePhysicObject.cpp" />
+		<Unit filename="core/src/Physics/Physics.cpp" />
+		<Unit filename="core/src/Physics/SpherePhysicObject.cpp" />
+		<Unit filename="core/src/Physics/TriangleMeshPhysicObject.cpp" />
+		<Unit filename="core/src/Picking.cpp" />
+		<Unit filename="core/src/Player.cpp" />
+		<Unit filename="core/src/PostProcess.cpp" />
+		<Unit filename="core/src/PostProcess/MotionBlur.cpp" />
+		<Unit filename="core/src/PostProcess/SSAO.cpp" />
+		<Unit filename="core/src/PostProcess/ScreenSpaceReflections.cpp" />
+		<Unit filename="core/src/ProgramData.cpp" />
+		<Unit filename="core/src/ResourceManager.cpp" />
+		<Unit filename="core/src/Scene.cpp" />
+		<Unit filename="core/src/Shader.cpp" />
+		<Unit filename="core/src/ShadowMapping.cpp" />
+		<Unit filename="core/src/Skybox.cpp" />
+		<Unit filename="core/src/SphericalHarmonics.cpp" />
+		<Unit filename="core/src/Sun.cpp" />
+		<Unit filename="core/src/Terrain.cpp" />
+		<Unit filename="core/src/Water.cpp" />
+		<Unit filename="core/src/cubemapRenderer.cpp" />
+		<Unit filename="core/src/main.cpp" />
+		<Unit filename="core/src/resources.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
-		<Unit filename="src/sys/KeyBoard.cpp" />
-		<Unit filename="src/sys/filesystem.cpp" />
+		<Unit filename="core/src/sys/KeyBoard.cpp" />
+		<Unit filename="core/src/sys/filesystem.cpp" />
 		<Unit filename="version.h" />
 		<Extensions>
 			<code_completion />
