--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ before_install:
   - sudo apt-get install libglew-dev
   - sudo apt-get install libsoil-dev
   - sudo apt-get install libopenal-dev
+  - sudo apt-get install libbullet3-dev
 
 language: cpp
