--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ before_install:
   - sudo apt-get install libsoil-dev
   - sudo apt-get install libopenal-dev
   - sudo apt-get install libbullet-dev
+  - sudo apt-get install libinih-dev
+  - sudo apt-get install lua5.3
+  - git clone https://github.com/nothings/stb.git
+  - sudo cp stb /usr/local/include/stb 
 
 script: make
 
