--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
   - sudo apt-get install -y libinih-dev
   - sudo apt-get install lua5.3
   - git clone https://github.com/nothings/stb.git
-  - sudo cp -r stb /usr/local/include/stb 
-  - ls /usr/local/include
+  - sudo cp -r stb /usr/include/stb 
+  - ls /usr/include
 
 script: make
 
