--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,14 @@ before_install:
   - sudo apt-get install libsoil-dev
   - sudo apt-get install libopenal-dev
   - sudo apt-get install libbullet-dev
-  - sudo apt-get install -y libinih-dev
-  - sudo apt-get install lua5.3
+  - git clone https://github.com/benhoyt/inih.git ./deps-64/inih
+  - cd deps-64/inih/
+  - g++ -c ini.c -o ini.o
+  - g++ -c ./cpp/INIReader.cpp -o INIReader.o
+  - ar -rvcs -o libinih.a INIReader.o ini.o
+  - cd ..
+  - cd ..
+  - sudo apt-get install lua5.3-dev
   - git clone https://github.com/nothings/stb.git
   - sudo cp -r stb /usr/include/stb 
   - ls 
