--- a/tools/hub/package.json
+++ b/tools/hub/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^9.2.0"
+    "electron": ">=9.3.1",
+    "ini": ">=1.3.6"
   }
 }
