--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,8 @@
 dist: focal
-
-compiler: gcc
-
-matrix:
-  include:
-      - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-      env:
-        - MATRIX_EVAL="CC=gcc-10 && CXX=g++-10"
   
 before_install:
-  - eval "${MATRIX_EVAL}"
   - sudo apt-get update -y
+  - sudo apt-get install gcc
   - sudo apt-get install cmake xorg-dev libglu1-mesa-dev
   - sudo apt-get install libglfw3-dev libglfw3
   - sudo apt-get install libglew-dev
