--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 
   - sudo apt-get install libbullet-dev
 
-  - mkdir thirdparty/imgui-docking/imgui-docking
+  - mkdir -p thirdparty/imgui-docking/imgui-docking
 
   - git clone --single-branch --branch docking https://github.com/ocornut/imgui.git ./thirdparty/imgui-docking/imgui-docking
 
