added cuadratic bezier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,25 @@
 cmake_minimum_required(VERSION 3.10)
+project(Epsilon_Engine)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(EPSILON_DIR "${PROJECT_SOURCE_DIR}/core")
+set(INCLUDES_DIR "${EPSILON_DIR}")
+set(HEADER_FILES "${INCLUDES_DIR}/pch.hpp")
 
 set(GLAD_DIR "${PROJECT_SOURCE_DIR}/thirdparty/glad")
+set(GLAD_INCLUDE_DIR "${GLAD_DIR}/include")
 
 option(DEBUG "Include debug symbols in the executable" OFF)
 
-project(Epsilon-Engine)
+include_directories(${INCLUDES_DIR})
+add_subdirectory(${INCLUDES_DIR})
 
-include_directories( ${MY_SOURCE_DIR}/core )
+include_directories(${GLAD_INCLUDE_DIR})
 
-add_executable (Epsilon_Engine.exe main.cpp)
+add_executable (Epsilon_Engine.exe "${EPSILON_DIR}/main.cpp" ${HEADER_FILES})
 
+target_include_directories(Epsilon_Engine.exe PRIVATE "${INCLUDES_DIR}")
+target_link_libraries(Epsilon_Engine.exe "${GLAD_DIR}/lib/libglad.a")
 
-add_library(GLAD)
-target_link_libraries(GLAD "${GLAD_DIR}/lib/libglad.a")
-
-find_package (GLAD COMPONENTS REQUIRED ${GLAD_DIR} )
-find_package (BULLET3 COMPONENTS REQUIRED thirdparty/bullet3)
-find_package (GLFW COMPONENTS REQUIRED thirdparty/glfw)
-find_package (GLM COMPONENTS REQUIRED thirdparty/glm)
-find_package (IMGUI COMPONENTS REQUIRED thirdparty/imgui-docking)
-find_package (INIH COMPONENTS REQUIRED thirdparty/inih)
-find_package (JSON-DEVELOP COMPONENTS REQUIRED thirdparty/json-develop)
-find_package (LUA COMPONENTS REQUIRED thirdparty/lua5.3.5)
-find_package (OPENAL COMPONENTS REQUIRED thirdparty/openal-soft)
-find_package (SOIL COMPONENTS REQUIRED thirdparty/soil)
-find_package (XAUDIO COMPONENTS REQUIRED thirdparty/XAudio2)
+#compuesto floable para recubrimiento de semillas
