--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(LearningVulkan VERSION 0.1.0)
 set (CMAKE_CXX_STANDARD 20)
-#include_directories(/c/VulkanSDK/1.2.182.0/Include)
-
-#link_directories(/c/VulkanSDK/1.2.182.0/Lib)
-#link_directories(/c/VulkanSDK/1.2.182.0/Bin)
 
 set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/external)
 
@@ -14,6 +10,7 @@ include(ExternalProject)
 ExternalProject_Add(glm
     GIT_REPOSITORY https://github.com/g-truc/glm.git
     INSTALL_COMMAND cmake -E echo "Skipping install step."
+    UPDATE_COMMAND ""
 )
 
 ExternalProject_Get_property(glm SOURCE_DIR)
@@ -25,6 +22,7 @@ include_directories(${GLM_BUILD_DIR})
 ExternalProject_Add(glfw3_d
     GIT_REPOSITORY https://github.com/glfw/glfw.git
     INSTALL_COMMAND cmake -E echo "Skipping install step."
+    UPDATE_COMMAND ""
 )
 
 ExternalProject_Get_property(glfw3_d SOURCE_DIR)
@@ -36,24 +34,19 @@ message(${GLFW3_BUILD_DIR})
 include_directories(${SOURCE_DIR}/include)
 link_directories(${GLFW3_BUILD_DIR}/src)
 
-
-add_library(glfw3 STATIC IMPORTED)
-set_target_properties(glfw3 PROPERTIES IMPORTED_LOCATION ${GLFW3_BUILD_DIR}/src/libglfw3.a)
-add_dependencies(glfw3 hidapi_external)
-
-SET(HEADERS
+SET(HEADERS 
     ${CMAKE_SOURCE_DIR}/framework
     ${CMAKE_SOURCE_DIR}/vk
     ${CMAKE_SOURCE_DIR}/engine
 )
 
-add_executable(LearningVulkan main.cpp)
+add_executable(${PROJECT_NAME} main.cpp)
 
 find_package(Vulkan REQUIRED)
-target_link_libraries(${PROJECT_NAME} ${Vulkan_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${Vulkan_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} glfw3)
+target_link_libraries(${PROJECT_NAME} PUBLIC glfw3)
 add_dependencies(${PROJECT_NAME} glfw3_d)
 add_dependencies(${PROJECT_NAME} glm)
 
