--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Install Dependencies
-      run: apt install libvulkan1 mesa-vulkan-drivers vulkan-utils xorg-dev libxcb-keysyms1-dev 
+      run: sudo apt install libvulkan1 mesa-vulkan-drivers vulkan-utils xorg-dev libxcb-keysyms1-dev 
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
